2012-02-02  Vidya Praveen (vidya.praveen@atmel.com)

PR bfd/13410
	* bfd/elf32-avr.c (elf32_avr_relax_section): Correct the
	condition that qualifies the candidates for relaxation.